<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.oscarruizpatricio.easyshopping.app.activities.HomeActivity"
    android:weightSum="100">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">

    </FrameLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:tabTextAppearance="@style/CustomTabLayout"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_weight="0">

        <android.support.design.widget.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:icon="@mipmap/ic_home"
            android:layout_marginBottom="1dp">
        </android.support.design.widget.TabItem>

        <android.support.design.widget.TabItem
            android:id="@+id/my_shopping_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mis_listas"
            android:icon="@mipmap/ic_shopping_cart"
            android:layout_marginBottom="1dp"/>

        <android.support.design.widget.TabItem
            android:id="@+id/sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ofertas"
            android:icon="@mipmap/ic_offer"
            android:layout_marginBottom="1dp"/>

        <android.support.design.widget.TabItem
            android:id="@+id/maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapas"
            android:icon="@mipmap/ic_map"
            android:layout_marginBottom="1dp"/>

        <android.support.design.widget.TabItem
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:icon="@mipmap/ic_profile"
            android:layout_marginBottom="1dp"/>
    </android.support.design.widget.TabLayout>
</LinearLayout>
