<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.oscarruizpatricio.easyshopping.app.activities.RegisterActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="40sp"
        android:textColor="@color/dark_grey"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_gravity="bottom"
            android:translationY="10dp"
            android:textColor="@color/dark_grey"
            android:background="@color/light_background"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_gravity="bottom"
            android:translationY="10dp"
            android:textColor="@color/dark_grey"
            android:background="@color/light_background"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/repitepassword">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/password_repeat"
            android:inputType="textPassword"
            android:layout_gravity="bottom"
            android:translationY="10dp"
            android:textColor="@color/dark_grey"
            android:background="@color/light_background"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/yaregistrado"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:background="@color/background"
        android:layout_gravity="end"
        android:paddingRight="30dp"
        android:layout_marginTop="20dp"
        android:clickable="true"/>

</LinearLayout>
