<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:id="@+id/ok_button"
            android:text="@string/dialog_ok_button"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:background="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:id="@+id/cancel_button"
            android:text="@string/dialog_cancel_button"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorAccent"
            android:background="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</LinearLayout>