<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".shoppinglistsmodule.fragments.AddShoppingListFragment"
    android:padding="20dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/list_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/list_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:text="@string/add_products"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:hint="@string/product_name"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/product_quantity_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:hint="@string/product_quantity"
            android:textSize="14sp"
            android:inputType="number"
            android:lines="1" />
        <Button
            android:id="@+id/add_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/add_button"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="3391.67">
    </ListView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:background="@color/background"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

</LinearLayout>
