<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.oscarruizpatricio.easyshopping.app.fragments.SalesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/offers_layout">
            <ProgressBar
                android:id="@+id/sales_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:translationZ="1dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/gradient_background">
                    <TextView
                        style="@style/header"
                        android:text="@string/offers"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/markets_list"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/no_offers_text_view"
                        android:text="@string/without_offers"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_margin="30dp"
                        android:visibility="gone"/>

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0.63">
                    </android.support.v4.view.ViewPager>

                    <me.relex.circleindicator.CircleIndicator
                        android:id="@+id/circle_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                    </me.relex.circleindicator.CircleIndicator>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
